Added Endangered data subset

--- a/National-Parks.Rmd
+++ b/National-Parks.Rmd
@@ -8,6 +8,8 @@ output: html_document
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 
+library(tidyverse)
+
 library(readr)
 species <- read_csv("Biodiversity/species.csv")
 
@@ -24,6 +26,8 @@ parks <- read_csv("Biodiversity/parks.csv")
 
 ##John
 
+speciesendanger <- species %>% 
+  filter(!is.na(`Conservation Status`))
 
 ##Gwen
 
