--- a/National-Parks.Rmd
+++ b/National-Parks.Rmd
@@ -19,7 +19,10 @@ parks <- read_csv("Biodiversity/parks.csv")
 ```
 
 ## Brainstorming
-
+  #Map of National Park locations to give background information
+  ##Question of whether species are endangered and whether they are native to recognize where to allocate resources. 
+  ##Where should we allocate resources based on where endangered speceies are and whether the species are native or invasive? 
+    #Map of endangered species
 
 ```{r}
 ##Tommy
@@ -27,7 +30,7 @@ parks <- read_csv("Biodiversity/parks.csv")
 ##John
 
 speciesendanger <- species %>% 
-  filter(!is.na(`Conservation Status`))
+  filter(!is.na(`Conservation Status`), Occurrence != "Not Confirmed")
 
 ##Gwen
 
