--- a/National-Parks.Rmd
+++ b/National-Parks.Rmd
@@ -21,7 +21,7 @@ parks <- read_csv("Biodiversity/parks.csv")
 ## Brainstorming
   #Map of National Park locations to give background information
   ##Question of whether species are endangered and whether they are native to recognize where to allocate resources. 
-  ##Where should we allocate resources based on where endangered speceies are and whether the species are native or invasive? 
+  ##Where should we allocate resources based on where endangered species are and whether the species are native or invasive? 
     #Map of endangered species
 
 ```{r}
@@ -30,7 +30,15 @@ parks <- read_csv("Biodiversity/parks.csv")
 ##John
 
 speciesendanger <- species %>% 
-  filter(!is.na(`Conservation Status`), Occurrence != "Not Confirmed")
+  filter(!is.na(`Conservation Status`), Occurrence != "Not Confirmed") %>% 
+  filter(!Abundance %in% c("Native", "Not Native"))
+
+speciesabundance <- species %>% 
+  filter(!is.na(Abundance)) %>% 
+  filter(!Abundance %in% c("Native", "Not Native")) %>% 
+  group_by(Abundance, `Conservation Status`) %>% 
+  summarize(count = n()) %>% 
+  filter(`Conservation Status` == "Species of Concern")
 
 ##Gwen
 
