--- a/National-Parks.Rmd
+++ b/National-Parks.Rmd
@@ -82,3 +82,63 @@ ggplot(speciesabundanceviz, aes(x = reorder(Abundance, count), y = count, fill =
 ##Gwen
 
 ```
+
+```{r}
+##Tommy
+
+speciescount <- species %>% 
+  group_by(`Park Name`) %>% 
+  summarize(total= n()) %>% 
+  mutate(sum(total))
+
+head(speciescount)
+
+native <- speciesendanger %>% 
+  filter(Nativeness == "Native") %>% 
+  group_by(Nativeness) %>% 
+  summarize(total = n())
+
+head(native)
+
+not_native <- speciesendanger %>% 
+  filter(Nativeness != "Native") %>% 
+  group_by(Nativeness) %>% 
+  summarize(total = n()) 
+
+head(not_native)
+
+percent_native <- native %>% 
+  full_join(not_native) %>% 
+  mutate(percent = (total / sum(total))*100) 
+
+head(percent_native)
+
+
+
+```
+
+```{r}
+#Tommy
+
+speciesgraph <- speciesendanger %>% 
+ filter(!is.na(Abundance), Abundance != 'Unknown') %>% 
+  group_by(Category, Abundance) %>% 
+  summarize(total = n()) %>% 
+  filter(total > 10) 
+  
+ggplot(speciesgraph) +
+geom_col(aes(x = fct_reorder(Category, total), fill=factor(Abundance, levels = c("Rare", "Uncommon", "Occasional", "Common", "Abundant")), y=total), stat='identity') +
+  labs(x = " ", y = "Total Count") +
+    theme(panel.background = element_rect(fill = "white", colour = "white",size = 2, linetype = "solid"), panel.grid.major = element_line(size = 0.5, linetype = 'solid',colour = "white"), panel.grid.minor = element_line(size = 0.25, linetype = 'solid',colour = "white")) +
+  guides(fill = guide_legend(title.position = "top", title = "Abundance"))+
+  labs(title = "Plant and Animal Abundance in National Parks", subtitle = "What are the most abundant species in National Parks?") +
+  theme(axis.text.y = element_text(color = "grey27"),axis.text.x = element_text(face = "italic", size = 10, color = "grey27", angle = 90), axis.ticks.y = element_blank(), legend.position = "right", legend.justification = "left", plot.background = element_rect(fill ="peachpuff"), legend.background = element_rect(fill ="white"), legend.text = element_text(face="italic", color = "grey27"), legend.title = element_text(color = "grey27", face = "bold"), plot.title = element_text(face = "bold", size = 17, hjust = 0.5, color = "grey27"), plot.subtitle = element_text(face = "italic", size = 10, hjust = 0.5, color = "grey27"), plot.caption = element_text(face = "italic", color = "grey27")) +
+  theme(axis.title.y=element_text(colour="grey27", face = "bold")) +
+   theme(axis.title.x=element_text(colour="grey27", face = "bold")) 
+
+
+#we do not have a count of exactly how many of these unique species are in national parks, but from this graphic we can see that there are more unqique bird speices than any other category.
+
+#total count is the total amount of distinct species in each category, so nonvascular plants make up only a handful of species, whereas there are nearly 2000 different types of birds 
+
+```
