--- a/National-Parks.Rmd
+++ b/National-Parks.Rmd
@@ -24,76 +24,6 @@ parks <- read_csv("Biodiversity/parks.csv")
   ##Where should we allocate resources based on where endangered species are and whether the species are native or invasive? 
     #Map of endangered species
 
-```{r message = FALSE}
-##John
-
-speciesendanger <- species %>% 
-  filter(!is.na(`Conservation Status`), Occurrence != "Not Confirmed") %>% 
-  filter(!Abundance %in% c("Native", "Not Native"))
-
-speciesabundance <- species %>% 
-  filter(!is.na(Abundance)) %>% 
-  filter(!Abundance %in% c("Native", "Not Native")) %>% 
-  group_by(Abundance, `Conservation Status`) %>% 
-  summarize(count = n()) %>% 
-  filter(`Conservation Status` == "Species of Concern")
-
-specieslargeviz <- speciesendanger %>% 
-  filter(!is.na(Abundance)) %>% 
-  group_by(Abundance, `Conservation Status`) %>% 
-  summarize(count = n()) %>% 
-  filter(!is.na(`Conservation Status`))
-
-speciesconservationviz <- speciesendanger %>% 
-  group_by(`Conservation Status`) %>% 
-  summarize(count = n()) %>% 
-  filter(!is.na(`Conservation Status`)) %>% 
-  arrange(desc(count)) %>% 
-  mutate(perc = (count / sum(count)) * 100) %>% 
-  mutate(ypos = cumsum(perc)- 0.4*perc ) %>% 
-  mutate(perc2 = round(perc, 1)) %>% 
-  mutate(perc3 = paste0(perc2, "%"))
-
-speciesabundanceviz <- speciesendanger %>% 
-  filter(!is.na(Abundance)) %>% 
-  group_by(Abundance) %>% 
-  summarize(count = n())
-
-# Here is where my visualization begins!
-
-ggplot(speciesconservationviz, aes(x = "", y = perc, fill = reorder(`Conservation Status`, count), label = perc3)) +
-  geom_bar(stat = "identity", width = 1, color = "white") + 
-  coord_polar("y", start = 0) + 
-  theme_void() + 
-  scale_fill_manual(values = c("#8F0F1B", "#BE3ACD", "#304F9B", "#C7DD91", "#48A421", "#69EF7B", "#11CCDC", "black"),
-                    breaks = c("Species of Concern", "Endangered", "Under Review", "Threatened", "In Recovery", "Proposed Endangered", "Proposed Threatened", "Extinct")) +
-  geom_text(aes(y = ypos), color = "white", size = 6, check_overlap = TRUE) + 
-    labs(fill = "Conservation Status", 
-         title = "How Often Are Species Assigned Each Conservation Status?", 
-         caption = "Overwhelmingly, species are placed in the 'Species of Concern' category,\nfar outweighing the next highest category: 'Endangered', at 6.8%.\nThis data excludes any species that are not given a category.\n(Including species not in danger of extinction).")
-
-ggplot(speciesabundanceviz, aes(x = "", y = count, fill = reorder(Abundance, count))) + 
-  geom_bar(stat = "identity", width = 1, color = "white") + 
-  coord_polar("y", start = 0) + 
-  theme_void() +
-  scale_fill_manual(values = c("#99DEF9", "#A53460", "#56EBD3", "#284E37", "#E4997F", "#84EE15"), 
-                    breaks = c("Uncommon", "Rare", "Common", "Unknown", "Occasional", "Abundant")) + 
-  labs(fill = "Abundance",
-       title = "How Often Are Species Assigned Each Abundance level?", 
-       caption = "Where I had expected this data to show the same overwhelming trend in\n'Uncommon' species, it shows no overwhelming categorizations.\nLike the first graphic, this data set excludes species without\nAbundance levels, as well as those without Conservation Statuses,\nas the data we are analyzing regards primarily endangered species.")
-
-ggplot(speciesabundanceviz, aes(x = reorder(Abundance, -count), y = count, fill = Abundance)) + 
-  geom_bar(stat = "identity", show.legend = FALSE) +
-  theme_classic() +
-  scale_fill_manual(values = c("#84EE15", "#56EBD3", "#E4997F", "#A53460", "#99DEF9", "#284E37")) + 
-  labs(x = "Abundance", 
-       title = "A Clearer Look at Abundance Levels", 
-       caption = "This graphic more clearly shows the actual trends in Abundance levels, using the same data as the previous graphic.")
-
-##Gwen
-
-```
-
 ```{r}
 ##Tommy
 
@@ -148,8 +78,78 @@ geom_col(aes(x = fct_reorder(Category, total), fill=factor(Abundance, levels = c
    theme(axis.title.x=element_text(colour="grey27", face = "bold")) 
 
 
-#we do not have a count of exactly how many of these unique species are in national parks, but from this graphic we can see that there are more unqique bird speices than any other category.
+#we do not have a count of exactly how many of these unique species are in national parks, but from this graphic we can see that there are more unique bird species than any other category.
 
 #total count is the total amount of distinct species in each category, so nonvascular plants make up only a handful of species, whereas there are nearly 2000 different types of birds 
+
+```
+
+## Data Pitfalls
+
+```{r message = FALSE}
+## John
+
+speciesendanger <- species %>% 
+  filter(!is.na(`Conservation Status`), Occurrence != "Not Confirmed") %>% 
+  filter(!Abundance %in% c("Native", "Not Native"))
+
+speciesabundance <- species %>% 
+  filter(!is.na(Abundance)) %>% 
+  filter(!Abundance %in% c("Native", "Not Native")) %>% 
+  group_by(Abundance, `Conservation Status`) %>% 
+  summarize(count = n()) %>% 
+  filter(`Conservation Status` == "Species of Concern")
+
+specieslargeviz <- speciesendanger %>% 
+  filter(!is.na(Abundance)) %>% 
+  group_by(Abundance, `Conservation Status`) %>% 
+  summarize(count = n()) %>% 
+  filter(!is.na(`Conservation Status`))
+
+speciesconservationviz <- speciesendanger %>% 
+  group_by(`Conservation Status`) %>% 
+  summarize(count = n()) %>% 
+  filter(!is.na(`Conservation Status`)) %>% 
+  arrange(desc(count)) %>% 
+  mutate(perc = (count / sum(count)) * 100) %>% 
+  mutate(ypos = cumsum(perc)- 0.4*perc ) %>% 
+  mutate(perc2 = round(perc, 1)) %>% 
+  mutate(perc3 = paste0(perc2, "%"))
+
+speciesabundanceviz <- speciesendanger %>% 
+  filter(!is.na(Abundance)) %>% 
+  group_by(Abundance) %>% 
+  summarize(count = n())
+
+# Here is where the visualization begins!
+
+ggplot(speciesconservationviz, aes(x = "", y = perc, fill = reorder(`Conservation Status`, count), label = perc3)) +
+  geom_bar(stat = "identity", width = 1, color = "white") + 
+  coord_polar("y", start = 0) + 
+  theme_void() + 
+  scale_fill_manual(values = c("#8F0F1B", "#BE3ACD", "#304F9B", "#C7DD91", "#48A421", "#69EF7B", "#11CCDC", "black"),
+                    breaks = c("Species of Concern", "Endangered", "Under Review", "Threatened", "In Recovery", "Proposed Endangered", "Proposed Threatened", "Extinct")) +
+  geom_text(aes(y = ypos), color = "white", size = 6, check_overlap = TRUE) + 
+    labs(fill = "Conservation Status", 
+         title = "How Often Are Species Assigned Each Conservation Status?", 
+         caption = "Overwhelmingly, species are placed in the 'Species of Concern' category,\nfar outweighing the next highest category: 'Endangered', at 6.8%.\nThis data excludes any species that are not given a category.\n(Including species not in danger of extinction).")
+
+ggplot(speciesabundanceviz, aes(x = "", y = count, fill = reorder(Abundance, count))) + 
+  geom_bar(stat = "identity", width = 1, color = "white") + 
+  coord_polar("y", start = 0) + 
+  theme_void() +
+  scale_fill_manual(values = c("#99DEF9", "#A53460", "#56EBD3", "#284E37", "#E4997F", "#84EE15"), 
+                    breaks = c("Uncommon", "Rare", "Common", "Unknown", "Occasional", "Abundant")) + 
+  labs(fill = "Abundance",
+       title = "How Often Are Species Assigned Each Abundance level?", 
+       caption = "Where I had expected this data to show the same overwhelming trend in\n'Uncommon' species, it shows no overwhelming categorizations.\nLike the first graphic, this data set excludes species without\nAbundance levels, as well as those without Conservation Statuses,\nas the data we are analyzing regards primarily endangered species.")
+
+ggplot(speciesabundanceviz, aes(x = reorder(Abundance, -count), y = count, fill = Abundance)) + 
+  geom_bar(stat = "identity", show.legend = FALSE) +
+  theme_classic() +
+  scale_fill_manual(values = c("#84EE15", "#56EBD3", "#E4997F", "#A53460", "#99DEF9", "#284E37")) + 
+  labs(x = "Abundance", 
+       title = "A Clearer Look at Abundance Levels", 
+       caption = "This graphic more clearly shows the actual trends in Abundance levels, using the same data as the previous graphic.")
 
 ```
