--- a/National-Parks.Rmd
+++ b/National-Parks.Rmd
@@ -254,3 +254,24 @@ finalvis <- species %>%
 head(finalvis)
 ```
 
+```{r}
+
+#Tommy
+
+speciesnewabundance <- speciesnew %>% 
+   filter(!is.na(`Abundance`), `Category` != "Vascular Plant") %>% 
+  group_by(Category, Abundance, `Conservation Status`) %>% 
+  summarize(total = n()) 
+  
+ggplot(speciesnewabundance) +
+geom_col(aes(y = fct_reorder(Category, total, .desc = TRUE), fill= `Conservation Status`, x=total)) +
+  labs(y = " ", x = "Total Count") +
+  theme(panel.background = element_rect(fill = "white", colour = "white",size = 2, linetype = "solid"), panel.grid.major = element_line(size = 0.5, linetype = 'solid',colour = "white"), panel.grid.minor = element_line(size = 0.25, linetype = 'solid',colour = "white")) +
+  guides(fill = guide_legend(title.position = "top", title = "Abundance"))+
+  labs(title = "Plant and Animal Abundance in National Parks", subtitle = "What are the most abundant threatened and endagered species in National Parks?") +
+  theme(axis.text.y = element_text(color = "grey27"),axis.text.x = element_text(size = 10, color = "grey27"), axis.ticks.y = element_blank(), legend.position = "right", legend.justification = "left", plot.background = element_rect(fill ="peachpuff"), legend.background = element_rect(fill ="white"), legend.text = element_text(face="italic", color = "grey27"), legend.title = element_text(color = "grey27", face = "bold"), plot.title = element_text(face = "bold", size = 17, hjust = 0.5, color = "grey27"), plot.subtitle = element_text(face = "italic", size = 10, hjust = 0.5, color = "grey27"), plot.caption = element_text(face = "italic", color = "grey27")) +
+  theme(axis.title.y=element_text(colour="grey27", face = "bold")) +
+   theme(axis.title.x=element_text(colour="grey27", face = "bold"))
+```
+
+
