--- a/National-Parks.Rmd
+++ b/National-Parks.Rmd
@@ -266,14 +266,18 @@ speciesnewabundance <- speciesnew %>%
   summarize(total = n()) 
   
 ggplot(speciesnewabundance) +
-geom_col(aes(y = fct_reorder(Category, total, .desc = TRUE), fill= `Conservation Status`, x=total)) +
+geom_col(aes(y = fct_reorder(Category, total), fill= `Conservation Status`, x=total)) +
   labs(y = " ", x = "Total Count") +
   theme(panel.background = element_rect(fill = "white", colour = "white",size = 2, linetype = "solid"), panel.grid.major = element_line(size = 0.5, linetype = 'solid',colour = "white"), panel.grid.minor = element_line(size = 0.25, linetype = 'solid',colour = "white")) +
-  guides(fill = guide_legend(title.position = "top", title = "Abundance"))+
-  labs(title = "Plant and Animal Abundance in National Parks", subtitle = "What are the most abundant threatened and endagered species in National Parks?") +
+  guides(fill = guide_legend(title.position = "top", title = "Level of Concern"))+
+  labs(title = "Plant and Animal Abundance in National Parks") +
   theme(axis.text.y = element_text(color = "grey27"),axis.text.x = element_text(size = 10, color = "grey27"), axis.ticks.y = element_blank(), legend.position = "right", legend.justification = "left", plot.background = element_rect(fill ="peachpuff"), legend.background = element_rect(fill ="white"), legend.text = element_text(face="italic", color = "grey27"), legend.title = element_text(color = "grey27", face = "bold"), plot.title = element_text(face = "bold", size = 17, hjust = 0.5, color = "grey27"), plot.subtitle = element_text(face = "italic", size = 10, hjust = 0.5, color = "grey27"), plot.caption = element_text(face = "italic", color = "grey27")) +
   theme(axis.title.y=element_text(colour="grey27", face = "bold")) +
-   theme(axis.title.x=element_text(colour="grey27", face = "bold"))
+   theme(axis.title.x=element_text(colour="grey27", face = "bold")) +
+  scale_fill_manual(values = c("darkseagreen4", "salmon"))
+
+
+
 ```
 
 
@@ -290,6 +294,24 @@ library(mapview) #install.packages("mapview")
 mapview(parks, xcol = "Longitude", ycol = "Latitude", crs = 4269, grid = FALSE)
 
 ```
+
+```{r}
+#Tommy working on map
+
+speciespark <- parks %>% 
+  full_join(species)
+
+speciespark2 <- speciespark %>% 
+filter(Occurrence != "Not Confirmed", !Abundance %in% c("Native", "Not Native"), !`Conservation Status` %in% c("Under Review", "In Recovery", "Extinct")) %>% 
+  mutate(`Conservation Status` = case_when(`Conservation Status` %in% c("Species of Concern", "Endangered", "Threatened", "Proposed Threatened", "Proposed Endangered") ~ "Species of Concern")) %>% 
+  mutate(`Conservation Status` = replace_na(`Conservation Status`, "Not of Concern")) %>% 
+  mutate(total = n()) %>% 
+  
+  #I want to do "Species of Concern" over "total"
+
+head(speciespark2)
+```
+
 
 ```{r}
 statevaluesmap <- statevalues %>% 
