--- a/National-Parks.Rmd
+++ b/National-Parks.Rmd
@@ -56,7 +56,7 @@ speciesnew <- species %>%
 ```{r}
 #Tommy --> PERCENT OF CONCERN FOR EACH SPECIES
 
-speciesnew %>% 
+concernpercent <- speciesnew %>% 
   group_by(Category, `Conservation Status`) %>% 
   summarize(total_ofconcern = n()) %>% 
   mutate(total_species = sum(total_ofconcern)) %>% 
@@ -64,6 +64,21 @@ speciesnew %>%
   mutate(percent = (total_ofconcern/total_species)*100) %>% 
   filter(`Conservation Status` != "Not of Concern")
 ```
+
+```{r}
+#Tommy --> PERCENT OF CONCERN FOR EACH STATE
+
+concernpercent_perstate <- speciespark2 %>% 
+  group_by(State, `Conservation Status`) %>% 
+  summarize(total_ofconcern = n()) %>% 
+  mutate(total_species_perstate = sum(total_ofconcern)) %>% 
+  ungroup() %>% 
+  mutate(percent = (total_ofconcern/total_species_perstate)*100) %>% 
+  filter(`Conservation Status` != "Not of Concern")
+
+head(concernpercent_perstate)
+```
+
 
 ```{r}
 ##Tommy
@@ -354,6 +369,25 @@ statevaluesmap %>%
     aes(
       map_id = state_name,
       fill = Count
+    )
+  ) +
+  expand_limits(x = map_data("state")$long, y = map_data("state")$lat) + 
+  theme_void()
+
+```
+
+```{r}
+statevaluesmap_perc <- concernpercent_perstate %>% 
+  full_join(states) %>% 
+   mutate(state_name = str_to_lower(abbr2state(State)))
+
+statevaluesmap_perc %>%
+  ggplot() +
+  geom_map(
+    map = fifty_states,
+    aes(
+      map_id = state_name,
+      fill = percent
     )
   ) +
   expand_limits(x = map_data("state")$long, y = map_data("state")$lat) + 
