--- a/National-Parks.Rmd
+++ b/National-Parks.Rmd
@@ -68,6 +68,14 @@ concernpercent <- speciesnew %>%
 ```{r}
 #Tommy --> PERCENT OF CONCERN FOR EACH STATE
 
+speciespark <- parks %>% 
+  full_join(species)
+
+speciespark2 <- speciespark %>% 
+filter(Occurrence != "Not Confirmed", !Abundance %in% c("Native", "Not Native"), !`Conservation Status` %in% c("Under Review", "In Recovery", "Extinct")) %>% 
+  mutate(`Conservation Status` = case_when(`Conservation Status` %in% c("Species of Concern", "Endangered", "Threatened", "Proposed Threatened", "Proposed Endangered") ~ "Species of Concern")) %>% 
+  mutate(`Conservation Status` = replace_na(`Conservation Status`, "Not of Concern")) 
+
 concernpercent_perstate <- speciespark2 %>% 
   separate(State, c("State1", "State2", "State3"), sep = ", ") %>% 
   pivot_longer(cols = c(State1, State2, State3), names_to = "State Type", values_to = "State") %>% 
@@ -80,6 +88,7 @@ concernpercent_perstate <- speciespark2 %>%
   filter(`Conservation Status` != "Not of Concern")
 
 head(concernpercent_perstate)
+
 ```
 
 
@@ -481,3 +490,21 @@ statevaluesmap_perc %>%
   expand_limits(x = map_data("state")$long, y = map_data("state")$lat) + 
   theme_void()
 ```
+
+```{r}
+tommything <- speciesnewabundance %>% 
+  group_by(Category, `Conservation Status`) %>% 
+  summarize(total = n()) %>% 
+  mutate(total_perstate = sum(total))
+
+library(plotly)
+p <- ggplot(
+  tommything,
+  aes(x = `Conservation Status`, y = total, fill = `Conservation Status`)
+) +
+  geom_col(position = "dodge") +
+  facet_wrap(~Category) 
+ggplotly(p)
+
+```
+
