Added more maps stuff

--- a/National-Parks.Rmd
+++ b/National-Parks.Rmd
@@ -18,6 +18,8 @@ devtools::install_github("wmurphyrd/fiftystater") # install.packages("devtools")
 
   data("fifty_states")
 
+library(ggpubr) # install.packages("ggpubr")  
+
 library(readr)
 species <- read_csv("Biodiversity/species.csv")
 
@@ -435,9 +437,13 @@ statevaluesmap <- statevalues %>%
   full_join(states) %>% 
    mutate(state_name = str_to_lower(abbr2state(State)))
 
+statevaluesmap_perc <- concernpercent_perstate %>% 
+  full_join(states) %>% 
+   mutate(state_name = str_to_lower(abbr2state(State)))
+
 #Average Number of Species of Concern per State
 
-statevaluesmap %>%
+concernavg <- statevaluesmap %>%
   ggplot() +
   geom_map(
     map = fifty_states,
@@ -451,7 +457,7 @@ statevaluesmap %>%
 
 #Total Number of Species of Concern per State
 
-statevaluesmap %>%
+concerncount <- statevaluesmap %>%
   ggplot() +
   geom_map(
     map = fifty_states,
@@ -465,7 +471,7 @@ statevaluesmap %>%
 
 #Total Number of Parks per State
 
-statevaluesmap %>%
+parkcount <- statevaluesmap %>%
   ggplot() +
   geom_map(
     map = fifty_states,
@@ -479,11 +485,7 @@ statevaluesmap %>%
 
 #Percent of Species of Concern vs. Not of Concern per State
 
-statevaluesmap_perc <- concernpercent_perstate %>% 
-  full_join(states) %>% 
-   mutate(state_name = str_to_lower(abbr2state(State)))
-
-statevaluesmap_perc %>%
+concernperc <- statevaluesmap_perc %>%
   ggplot() +
   geom_map(
     map = fifty_states,
@@ -495,9 +497,51 @@ statevaluesmap_perc %>%
   expand_limits(x = map_data("state")$long, y = map_data("state")$lat) + 
   theme_void()
 
+ggarrange(
+  parkcount, concerncount, concernavg, ncol = 2, nrow = 2)
+)
+
 ```
 
+concernavg <- statevaluesmap %>%
+  ggplot() +
+  geom_map(
+    map = fifty_states,
+    aes(
+      map_id = state_name,
+      fill = ConcernAvg
+    )
+  ) +
+  expand_limits(x = map_data("state")$long, y = map_data("state")$lat) + 
+  theme_void()
 
+concerncount <- statevaluesmap %>%
+  ggplot() +
+  geom_map(
+    map = fifty_states,
+    aes(
+      map_id = state_name,
+      fill = Concern
+    )
+  ) +
+  expand_limits(x = map_data("state")$long, y = map_data("state")$lat) + 
+  theme_void()
+
+parkcount <- statevaluesmap %>%
+  ggplot() +
+  geom_map(
+    map = fifty_states,
+    aes(
+      map_id = state_name,
+      fill = Count
+    )
+  ) +
+  expand_limits(x = map_data("state")$long, y = map_data("state")$lat) + 
+  theme_void()
+
+ggarrange(
+  parkcount, concerncount, concernavg, ncol = 2, nrow = 2)
+)
 
 ```{r}
 tommything <- speciesnewabundance %>% 
